package domain.working_date

import java.time.LocalDate

case class WorkingMonth(value: LocalDate)
